[gd_scene load_steps=44 format=2]

[ext_resource path="res://Sprites/Spritesheets/Monsters/flipped chara_troll.png" type="Texture" id=1]
[ext_resource path="res://Scripts/The Boss.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Spritesheets/Monsters/chara_troll.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Enemies/Random Position Generator.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 96, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 144, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 48, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 96, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 144, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 0, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 48, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 96, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 144, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 144, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 96, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 0, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 48, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 0, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 0, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 48, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 96, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 144, 240, 48, 48 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "MoveLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "MoveRight",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "MoveUp",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "MoveDown",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "IdleDown",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "AttackUp",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "AttackRight",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ) ],
"loop": true,
"name": "IdleRight",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "AttackLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ) ],
"loop": true,
"name": "IdleLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ) ],
"loop": true,
"name": "IdleUp",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ) ],
"loop": true,
"name": "ChargeMeleeRight",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "AttackDown",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=39]
radius = 108.057
height = 46.2104

[node name="The Boss" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.20486, 6.61459 )
scale = Vector2( 16, 16 )
frames = SubResource( 38 )
animation = "IdleDown"
speed_scale = 0.5
playing = true

[node name="Tween" type="Tween" parent="AnimatedSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 39 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Melee Attack Timer" type="Timer" parent="."]

[node name="Charge Attack Timer" type="Timer" parent="."]

[node name="Random Position Generator" parent="." instance=ExtResource( 4 )]

[node name="Node2D" type="Node2D" parent="."]

[node name="Melee Right" type="Area2D" parent="Node2D"]
position = Vector2( 232, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Melee Right"]
polygon = PoolVector2Array( 80, -16, 64, 68, -32, 96, -232, 0, -36, -104, 44, -84 )

[node name="Melee Left" type="Area2D" parent="Node2D"]
position = Vector2( -228, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Melee Left"]
polygon = PoolVector2Array( -76, 0, -32, -64, 64, -104, 228, 0, 64, 116, -40, 68 )

[node name="Melee Up" type="Area2D" parent="Node2D"]
position = Vector2( 0, -224 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Melee Up"]
polygon = PoolVector2Array( 0, -72, 32, -72, 104, -28, 144, 40, 0, 224, -128, 36, -76, -40 )

[node name="Melee Down" type="Area2D" parent="Node2D"]
position = Vector2( 0, 224 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Melee Down"]
polygon = PoolVector2Array( 0, 72, 56, 44, 92, -20, 76, -96, 0, -224, -84, -92, -96, -32, -52, 52 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Melee Attack Timer" to="." method="_on_Melee_Attack_Timer_timeout"]
[connection signal="timeout" from="Charge Attack Timer" to="." method="_on_Charge_Attack_Timer_timeout"]
[connection signal="body_entered" from="Node2D/Melee Right" to="." method="_on_Melee_Right_body_entered"]
[connection signal="body_exited" from="Node2D/Melee Right" to="." method="_on_Melee_Right_body_exited"]
[connection signal="body_entered" from="Node2D/Melee Left" to="." method="_on_Melee_Left_body_entered"]
[connection signal="body_exited" from="Node2D/Melee Left" to="." method="_on_Melee_Left_body_exited"]
[connection signal="body_entered" from="Node2D/Melee Up" to="." method="_on_Melee_Up_body_entered"]
[connection signal="body_exited" from="Node2D/Melee Up" to="." method="_on_Melee_Up_body_exited"]
[connection signal="body_entered" from="Node2D/Melee Down" to="." method="_on_Melee_Down_body_entered"]
[connection signal="body_exited" from="Node2D/Melee Down" to="." method="_on_Melee_Down_body_exited"]
